fix bug
about page is not overlapping anymore

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 
 .id{
-    width: 300px;
+    width: 85% ;
 }
 
 p{
